--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,40 +5,46 @@ services:
   dev:
     build:
       context: .
-      target: build
+      target: build # Assuming 'build' is a stage in your main Dockerfile
       args:
-        GEMINI_API_KEY: AIzaSyDKnQadF23I7YNpbKXcIJS0EmMcX4JrqUg
+        # Use variable substitution from .env
+        GEMINI_API_KEY: ${GEMINI_API_KEY}
     ports:
       - "3000:3000"
     volumes:
       - .:/app
       - /app/node_modules
     environment:
-      NODE_ENV: development
-      GEMINI_API_KEY: AIzaSyDKnQadF23I7YNpbKXcIJS0EmMcX4JrqUg
-      BOT_TOKEN: 7918410282:AAGeO6XSDt3YVml1z39_K5mABMMa0uGqjfQ
-      API_ID: 23094796
-      API_HASH: 23fc6c59b556daf57e757c4956cf6fd4
-      DOMAIN: ai-checkers.vercel.app
+      NODE_ENV: development # This is specific to the dev service
+      # These will be picked up from the .env file
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
+      BOT_TOKEN: ${BOT_TOKEN}
+      API_ID: ${API_ID}
+      API_HASH: ${API_HASH}
+      DOMAIN: ${DOMAIN}
     command: npm run dev
     depends_on:
       - websocket
-    
+
   # Production service for React app
   prod:
     build:
       context: .
+      # If 'prod' also needs a specific target in Dockerfile, specify it.
+      # args here usually means the final stage of your main Dockerfile
       args:
-        GEMINI_API_KEY: AIzaSyDKnQadF23I7YNpbKXcIJS0EmMcX4JrqUg
+        # Use variable substitution from .env
+        GEMINI_API_KEY: ${GEMINI_API_KEY}
     ports:
       - "80:80"
     environment:
-      NODE_ENV: production
-      GEMINI_API_KEY: AIzaSyDKnQadF23I7YNpbKXcIJS0EmMcX4JrqUg
-      BOT_TOKEN: 7918410282:AAGeO6XSDt3YVml1z39_K5mABMMa0uGqjfQ
-      API_ID: 23094796
-      API_HASH: 23fc6c59b556daf57e757c4956cf6fd4
-      DOMAIN: ai-checkers.vercel.app
+      NODE_ENV: production # This is specific to the prod service
+      # These will be picked up from the .env file
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
+      BOT_TOKEN: ${BOT_TOKEN}
+      API_ID: ${API_ID}
+      API_HASH: ${API_HASH}
+      DOMAIN: ${DOMAIN}
     depends_on:
       - websocket
 
@@ -48,12 +54,13 @@ services:
       context: .
       dockerfile: Dockerfile.websocket
     ports:
-      - "2536:2536"
+      - "2536:2536" # You had 2536 in the original, I've kept that.
     volumes:
       - ./server:/app/server
       - ./db:/app/db
     environment:
-      BOT_TOKEN: 7918410282:AAGeO6XSDt3YVml1z39_K5mABMMa0uGqjfQ
-      API_ID: 23094796
-      API_HASH: 23fc6c59b556daf57e757c4956cf6fd4
-      DOMAIN: ai-checkers.vercel.app 
+      # These will be picked up from the .env file
+      BOT_TOKEN: ${BOT_TOKEN}
+      API_ID: ${API_ID}
+      API_HASH: ${API_HASH}
+      DOMAIN: ${DOMAIN}
